apps/gcp/gateways/gke-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-https
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: prow-tls
            namespace: apps
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
  addresses:
    - type: NamedAddress
      value: ${INGRESS_STATIC_IP_NAME}
